modified text on movie card to correct overflow issues

--- a/src/components/movieCard.css
+++ b/src/components/movieCard.css
@@ -37,7 +37,13 @@
   border-radius: 0 0 3px 3px;
   align-items: center;
   text-align: center;
-  font-size: .9rem;
+  font-size: 0.9rem;
+}
+
+.cardBody h3 {
+  height: 90%;
+  overflow: hidden;
+  display: flex;
 }
 
 .detailsButton {
@@ -90,5 +96,9 @@
   .movieCardContainer {
     width: 100%;
     height: 70%;
+  }
+
+  .cardBody h3 {
+    align-items: center;
   }
 }
